--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev": "tsnd --exit-child src/server.ts"
+    "dev": "npx prisma generate && tsnd --exit-child src/server.ts"
   },
   "dependencies": {
     "@prisma/client": "^4.3.1",
